INCLUDE_DIRECTORIES(${XM_INCLUDE_DIRS})

ADD_EXECUTABLE(filetoh filetoh.c)

ADD_EXECUTABLE(xmbench xmbench.c)
TARGET_LINK_LIBRARIES(xmbench ${XM_LIBRARIES} xms)

ADD_EXECUTABLE(xmtoau xmtoau.c)
TARGET_LINK_LIBRARIES(xmtoau ${XM_LIBRARIES} xms)

ADD_EXECUTABLE(xmtowav xmtowav.c)
TARGET_LINK_LIBRARIES(xmtowav ${XM_LIBRARIES} xms)

ADD_EXECUTABLE(libxmtoau libxmtoau.c)
TARGET_LINK_LIBRARIES(libxmtoau ${XM_LIBRARIES} xms)

FIND_PACKAGE(ALSA)

IF(${ALSA_FOUND})
ADD_DEFINITIONS(-D_POSIX_SOURCE)
ADD_EXECUTABLE(xmtoalsa xmtoalsa.c)
TARGET_LINK_LIBRARIES(xmtoalsa ${ALSA_LIBRARIES} ${XM_LIBRARIES} xms)
ADD_SUBDIRECTORY(xmprocdemo)
ENDIF()

ADD_SUBDIRECTORY(xmgl)
